Terraform/sg.tf
resource "aws_default_vpc" "default" {}

resource "aws_security_group" "sg" {
  name        = "${var.security_group_name}-${var.deployment_type}"
  description = "Allow SSH, HTTP and Docker access"
  vpc_id      = aws_default_vpc.default.id
  tags = {
    Name = "${var.security_group_name}-${var.deployment_type}"
  }

  # Inbound rules
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTP access from anywhere"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow SSH access from anywhere"
  }

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow backend Docker access from anywhere"
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow Frontend Docker access from anywhere"
  }

  # Outbound rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outbound access"
  }
}
